@@ -43,6 +43,8 @@ Version 1.3-svn:
     * The terrains are now split in groups to the list of terrains per group
       is a more friendly list. (NOTE this needs to be finished before 
       a release Mordante's graphics suck ;) )
+    * When not in drawing mode the brush setting is ignored and drawn with
+      the size of one tile.	
 
   * Multiplayer
     * Maps
