@@ -26,6 +26,7 @@ Version 1.3-svn:
    * flipping a map over the X axis uses slightly different filler rules
    * added the paste option to the edit menu
    * added the option to split the terrains is groups
+   * the brush size in non-drawing mode is ignored
  * graphics
    * improved layering system for terrain graphics
    * fixed terrain selection probabilites (patch #617)
